vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.out
vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.vv:5:16: error: MyStruct type is generic struct, must specify the generic type names, e.g. MyStruct[int]
    3 | }
    4 | 
    5 | type MyAlias = MyStruct[T]
      |                ~~~~~~~~~~~
    6 | type MyAlias2 = MyStruct
vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.vv:6:17: error: MyStruct type is generic struct, must specify the generic type names, e.g. MyStruct[int]
    4 | 
    5 | type MyAlias = MyStruct[T]
    6 | type MyAlias2 = MyStruct
      |                 ~~~~~~~~
