vlib/v/checker/tests/type_alias_decl_parent_type_generic_struct_no_concrete_type_err.vv
struct MyStruct[T] {
	t T
}

type MyAlias = MyStruct[T]
type MyAlias2 = MyStruct
